--- a/css/style.css
+++ b/css/style.css
@@ -7,65 +7,56 @@
     --font-fam: 'Outfit', sans-serif;
   }
 
-  *{
-    margin: 0;
-    padding: 0;
-  }
-
 body{
-    font-family: var(font-fam);
-    font-weight: 15px;
+    font-family: var(--body-font);
     text-align: center;
-    background-color: var(--light-gray);
-    display:flex; 
-    align-content:center; 
-    justify-content: center; 
-    min-height:100vh;
-
 }
 
-img{
-    margin: 30px;
-    width:288px;
-    height:288px;
-    max-width:100%;
-    display:inline-block;
-    border-radius: 0.75em;
+*{
+    margin:0;
+    padding: 0;
+}
+
+main{
+    border:1px solid black;
+    background-color: var(--light-gray);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.container{
+    background-color: var(--white);
+    width: 20.125rem;
+    height:31.0625rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 10px;
 }
 
 h1{
     color: var(--dark-blue);
-    margin: 0 60px 20px 60px;
+    margin: 0.9375px;
+    font-size: 1.4375rem;
     font-weight: 700;
-    font-size: 1.3rem;
+    letter-spacing: -0.015rem;
+    padding: 0px 0.8rem 0px 0.8rem;
+}
+
+img{
+    width: 18.125rem;
+    height: 18.125rem;
+    margin: 0.9375rem;
+    border-radius: 10px;
 }
 
 p{
-    color:var(--grayish-blue);
-    margin: 0 60px;
-    padding-bottom: 20px;
+    color: var(--light-gray);
+    margin: 0.375rem 0 2.75rem 0;
+    font-size: 1rem;
+    font-weight: 400;
+    letter-spacing: -0.015rem;
+    padding: 0px 1.5625rem 0px 1.5625rem;
 }
-
-/* .container{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    height: 100vh;
-} */
-
-
-.container{
-    background-color: var(--white);
-    margin: auto;
-    border-radius: 0.75rem;
-    width:320px;
-    height: 500px;
-    display:flex;
-    flex-direction: column;
-    align-items:center;
-}
-
-/* Sizes
-- Mobile: 375px
-- Desktop: 1440px */
-
