--- a/css/style.css
+++ b/css/style.css
@@ -15,10 +15,10 @@ body{
 *{
     margin:0;
     padding: 0;
+    font-size: 10px;
 }
 
 main{
-    border:1px solid black;
     background-color: var(--light-gray);
     display: flex;
     justify-content: center;
@@ -28,35 +28,34 @@ main{
 
 .container{
     background-color: var(--white);
-    width: 20.125rem;
-    height:31.0625rem;
+    width: 32rem;
+    height:50rem;
     display: flex;
     flex-direction: column;
     align-items: center;
+    border-radius: 20px;
+}
+
+img{
+    width: 28.8rem;
+    height: 28.8rem;
+    margin: 1.8rem 1.6rem;
     border-radius: 10px;
 }
 
 h1{
+    padding: 0;
     color: var(--dark-blue);
-    margin: 0.9375px;
-    font-size: 1.4375rem;
+    font-size: 2.3rem;
     font-weight: 700;
-    letter-spacing: -0.015rem;
-    padding: 0px 0.8rem 0px 0.8rem;
-}
-
-img{
-    width: 18.125rem;
-    height: 18.125rem;
-    margin: 0.9375rem;
-    border-radius: 10px;
+    letter-spacing: -0.03rem;
+    margin: 0 3.3rem 2.5rem 3.3rem;
 }
 
 p{
     color: var(--light-gray);
-    margin: 0.375rem 0 2.75rem 0;
-    font-size: 1rem;
+    font-size: 1.6rem;
     font-weight: 400;
-    letter-spacing: -0.015rem;
-    padding: 0px 1.5625rem 0px 1.5625rem;
+    letter-spacing: -0.025rem;
+    margin: 0 3.3rem;
 }
