--- a/css/style.css
+++ b/css/style.css
@@ -49,11 +49,11 @@ h1{
     font-size: 2.3rem;
     font-weight: 700;
     letter-spacing: -0.03rem;
-    margin: 0 3.3rem 2.5rem 3.3rem;
+    margin: 0.4rem 3.3rem 2.5rem 3.3rem;
 }
 
 p{
-    color: var(--light-gray);
+    color: var(--grayish-blue);
     font-size: 1.6rem;
     font-weight: 400;
     letter-spacing: -0.025rem;
