--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ h1{
     font-size: 2.3rem;
     font-weight: 700;
     letter-spacing: -0.03rem;
-    margin: 0.4rem 3.3rem 2.5rem 3.3rem;
+    margin: 0.4rem 3.3rem 2rem 3.3rem;
 }
 
 p{
@@ -58,4 +58,5 @@ p{
     font-weight: 400;
     letter-spacing: -0.025rem;
     margin: 0 3.3rem;
+    padding: 0;
 }
